[package]
name = "gas-algebra-ext"
version = "0.0.1"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
repository = "https://github.com/aptos-core/aptos-labs"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-core-types = { git = "https://github.com/Queryable-Labs/move", rev = "19dc38f1978467bd9ad1d163d6c7ff89de92d9d2" }
